Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-60536

[WinRT]App fails to load completely

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.9.0 RC
    • 5.9.0 Beta 3
    • None
    • UWP 64bit
    • 88e02bb0a9b97d68a4b270e4ddfb6d0847c702a9 (qttools/5.9.0, 22.5.2017, 5.9.0)

      Use the following example:

      https://doc.qt.io/qt-5/qtcanvas3d-threejs-planets-example.html

      What makes this example relevant is that it has a big resource file.

      Although it compiles, at start I get this:

      qt.winrtrunner.app: JIT is disabled for QML. Property bindings and animations will be very slow. Visit https://wiki.qt.io/V4 to learn about possible solutions for your platform.
      qt.winrtrunner.app: qrc:/StyledSlider.qml:55:1: Type Slider unavailable
      qt.winrtrunner.app: qrc:/QtQuick/Controls/Slider.qml: No such file or directory
      qt.winrtrunner: App exited with code 1
      

      It seems that qml components are not properly loaded.

      This only happens with UWP 64bit builds. With UWP 32bit and UWP armv7 builds everything seems to be running ok.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kleint Friedemann Kleint
            adrian.gabureanu Adrian Gabureanu
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes