windeployqt: Unconditionally deploy all files of Quick Controls 1

The files are added to resource files only in the case of static builds;
so, for Windows UWP 64, for which QML caching is disabled, they were
missing.

Task-number: QTBUG-60536
Change-Id: Idb795f71441ab1bfbc1cdbc53a322ee9e86e54bc
Reviewed-by: Simon Hausmann <simon.hausmann@qt.io>